Fix layout overlap issue

--- a/src/client/components/layout/layout.styl
+++ b/src/client/components/layout/layout.styl
@@ -3,3 +3,4 @@
 .layout-item
   position absolute
   background main
+  overflow hidden
